updated double scrollbar bug for case studies

--- a/src/assets/scss/components/_02-layout.scss
+++ b/src/assets/scss/components/_02-layout.scss
@@ -1,6 +1,9 @@
+html, body {
+    height: 100%;
+}
+
 body {
     background-color: $black;
-    height: 100%;
 }
 
 figure {
@@ -14,7 +17,7 @@ figure {
 .main-scene {
     // @include mui-animation(fade);
     @include zero-out;
-
+    height: 100%; 
     transition-timing-function: ease-in;
     animation-duration: 1.2s;
 
