--- a/src/assets/scss/components/_02a-casestudy.scss
+++ b/src/assets/scss/components/_02a-casestudy.scss
@@ -17,6 +17,7 @@ $items: 3;
 #case-study-page {
     .page-content {
         padding: rem(70) 0 0;
+        overflow: hidden;
     }
     .cd-nav-trigger {
         // @include abs-pos($t: 24px, $r:5%);
@@ -304,11 +305,7 @@ $items: 3;
 .cd-case-info {
     @include abs-pos($t: 0, $l:0);
     @include transition(opacity .4s, visibility .4s);
-    @include bp(large) {
-        .content-wrapper {
-            padding: 4em 0;
-        }
-    }
+    margin: 0; 
     width: 100%;
     height: 100%;
     visibility: hidden;
@@ -328,7 +325,8 @@ $items: 3;
 
     .content-wrapper {
         background-color: $white;
-        padding: 2em 0 3em;
+        margin: 0; 
+        padding: 4em 0;
         position: relative;
         z-index: 2;
     }
@@ -344,7 +342,7 @@ $items: 3;
 
     &.has-boxshadow .content-wrapper {
         /* add a box-shadow while scrolling over the background image */
-        box-shadow: 0 -5px 30px rgba($black, .2);
+        // box-shadow: 0 -5px 30px rgba($black, .2);
     }
 }
 
@@ -388,7 +386,7 @@ $items: 3;
     }
 
     50% {
-        @include transform(translateY(10px) translateX(-50%));
+        @include transform(translateY(0) translateX(-50%));
     }
 
     100% {
@@ -402,7 +400,7 @@ $items: 3;
     }
 
     50% {
-        @include transform(translateY(10px) translateX(-50%));
+        @include transform(translateY(0) translateX(-50%));
     }
 
     100% {
